--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(inliner)
 add_subdirectory(loop_invariant_code_motion)
 add_subdirectory(loop_metadata)
 add_subdirectory(loop_stats)
+add_subdirectory(privatizer)
 add_subdirectory(parallelization_technique)
 add_subdirectory(parallelizer)
 add_subdirectory(pdg_stats)
